[package]
name = "continuations-v2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Continuation AIRs and utilities"

[dependencies]
p3-air = { workspace = true }
p3-bn254 = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
recursion-circuit = { workspace = true }
stark-recursion-circuit-derive = { workspace = true }
verify-stark = { workspace = true }
openvm-stark-backend = { workspace = true }
openvm-stark-sdk = { workspace = true }
openvm-circuit-primitives = { workspace = true }
openvm-circuit = { workspace = true }
openvm-poseidon2-air = { workspace = true }

itertools.workspace = true
tracing.workspace = true
eyre.workspace = true
derive-new.workspace = true
cfg-if.workspace = true
num-bigint.workspace = true

openvm-cuda-common = { workspace = true, optional = true }
openvm-cuda-backend = { workspace = true, optional = true }

[dev-dependencies]
openvm-rv32im-circuit = { workspace = true, features = ["test-utils"] }
openvm-rv32im-transpiler = { workspace = true }
openvm-toolchain-tests = { workspace = true }
openvm-transpiler = { workspace = true }
test-case = { workspace = true }

[build-dependencies]
openvm-cuda-builder = { workspace = true, optional = true }

[features]
default = ["parallel"]
parallel = ["openvm-circuit/parallel", "recursion-circuit/parallel"]
metrics = ["openvm-circuit/metrics"]

cuda = [
    "dep:openvm-cuda-builder",
    "dep:openvm-cuda-common",
    "dep:openvm-cuda-backend",
    "openvm-circuit-primitives/cuda",
    "openvm-circuit/cuda",
    "openvm-rv32im-circuit/cuda",
    "recursion-circuit/cuda",
]
touchemall = [
    "cuda",
    "openvm-cuda-common/touchemall",
    "openvm-cuda-backend/touchemall",
    "openvm-circuit/touchemall",
]
