[package]
name = "openvm-continuations"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Continuation AIRs and utilities"

[dependencies]
p3-air = { workspace = true }
p3-bn254 = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
openvm-recursion-circuit = { workspace = true }
openvm-recursion-circuit-derive = { workspace = true }
openvm-verify-stark-host = { workspace = true }
openvm-stark-backend = { workspace = true }
openvm-stark-sdk = { workspace = true, features = ["baby-bear-bn254-poseidon2"] }
openvm-circuit-primitives = { workspace = true }
openvm-circuit = { workspace = true }
openvm-poseidon2-air = { workspace = true }

itertools.workspace = true
tracing.workspace = true
eyre.workspace = true
derive-new.workspace = true
cfg-if.workspace = true
num-bigint.workspace = true

openvm-cuda-common = { workspace = true, optional = true }
openvm-cuda-backend = { workspace = true, optional = true, features = ["baby-bear-bn254-poseidon2"] }

[dev-dependencies]
openvm-rv32im-circuit = { workspace = true, features = ["test-utils"] }
openvm-rv32im-transpiler = { workspace = true }
openvm-deferral-circuit = { workspace = true }
openvm-deferral-transpiler = { workspace = true }
openvm-instructions = { workspace = true }
openvm-toolchain-tests = { workspace = true }
openvm-transpiler = { workspace = true }
test-case = { workspace = true }

[build-dependencies]
openvm-cuda-builder = { workspace = true, optional = true }

[features]
default = ["parallel"]
parallel = ["openvm-circuit/parallel", "openvm-recursion-circuit/parallel"]
metrics = ["openvm-circuit/metrics"]

cuda = [
    "dep:openvm-cuda-builder",
    "dep:openvm-cuda-common",
    "dep:openvm-cuda-backend",
    "openvm-circuit-primitives/cuda",
    "openvm-circuit/cuda",
    "openvm-rv32im-circuit/cuda",
    "openvm-recursion-circuit/cuda",
    "openvm-cuda-backend/baby-bear-bn254-poseidon2",
]
touchemall = [
    "cuda",
    "openvm-cuda-common/touchemall",
    "openvm-cuda-backend/touchemall",
    "openvm-circuit/touchemall",
]
