[package]
name = "openvm-execution-profile"
description = "Execution profile conversion and upload tools for OpenVM"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
eyre.workspace = true
flate2 = "1"
fxprof-processed-profile = "0.8"
openvm-circuit = { workspace = true, features = ["rvr"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json.workspace = true
tempfile.workspace = true
