[package]
name = "openvm-prof"
description = "OpenVM profiling tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
itertools = { workspace = true, features = ["use_std"] }
num-format = "0.4"

metrics = { workspace = true }
metrics-exporter-prometheus = "0.16.1"
metrics-process = "2.4.0"
metrics-tracing-context = "0.18.0"
metrics-util = "0.19.0"
tracing = { workspace = true }
tracing-subscriber = "0.3.19"
