[package]
name = "recursion-circuit"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Recursion circuit for v2"

[dependencies]
itertools = { workspace = true }
p3-maybe-rayon.workspace = true
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
stark-backend-v2 = { workspace = true }
stark-recursion-circuit-derive = { workspace = true }
openvm-stark-backend = { workspace = true }
openvm-stark-sdk = { workspace = true }
openvm-circuit-primitives = { workspace = true }
openvm-circuit = { workspace = true }
openvm-poseidon2-air = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }

[dev-dependencies]
stark-backend-v2 = { workspace = true, features = ["test-utils"] }

[features]
default = ["parallel"]
parallel = ["stark-backend-v2/parallel"]
