[package]
name = "openvm-sdk-config"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
openvm-stark-backend = { workspace = true }
stark-backend-v2 = { workspace = true }
openvm-cuda-backend = { workspace = true, optional = true }
cuda-backend-v2 = { workspace = true, optional = true }

openvm-algebra-circuit = { workspace = true }
openvm-algebra-transpiler = { workspace = true }
openvm-bigint-circuit = { workspace = true }
openvm-bigint-transpiler = { workspace = true }
openvm-ecc-circuit = { workspace = true }
openvm-ecc-transpiler = { workspace = true }
openvm-keccak256-circuit = { workspace = true }
openvm-keccak256-transpiler = { workspace = true }
openvm-sha256-circuit = { workspace = true }
openvm-sha256-transpiler = { workspace = true }
openvm-pairing-circuit = { workspace = true }
openvm-pairing-transpiler = { workspace = true }
openvm-rv32im-circuit = { workspace = true }
openvm-rv32im-transpiler = { workspace = true }
openvm-transpiler = { workspace = true }
openvm-circuit = { workspace = true }
openvm = { workspace = true }

serde.workspace = true
toml.workspace = true
bon.workspace = true
derive_more.workspace = true
cfg-if.workspace = true

[features]
cuda = [
    "dep:openvm-cuda-backend",
    "dep:cuda-backend-v2",
    "openvm-circuit/cuda",
    "openvm-algebra-circuit/cuda",
    "openvm-bigint-circuit/cuda",
    "openvm-ecc-circuit/cuda",
    "openvm-keccak256-circuit/cuda",
    "openvm-sha256-circuit/cuda",
    "openvm-pairing-circuit/cuda",
    "openvm-rv32im-circuit/cuda",
]
metrics = [
    "openvm-circuit/metrics",
]
tco = [
    "openvm-circuit/tco",
    "openvm-rv32im-circuit/tco",
    "openvm-sha256-circuit/tco",
    "openvm-keccak256-circuit/tco",
    "openvm-bigint-circuit/tco",
    "openvm-algebra-circuit/tco",
    "openvm-ecc-circuit/tco",
    "openvm-pairing-circuit/tco",
]
aot = [
    "openvm-circuit/aot",
    "openvm-rv32im-circuit/aot",
    "openvm-sha256-circuit/aot",
    "openvm-keccak256-circuit/aot",
    "openvm-bigint-circuit/aot",
    "openvm-algebra-circuit/aot",
    "openvm-ecc-circuit/aot",
    "openvm-pairing-circuit/aot",
]
perf-metrics = [
    "openvm-circuit/perf-metrics",
    "openvm-transpiler/function-span",
]
# turns on stark-backend debugger in all proofs
stark-debug = ["openvm-circuit/stark-debug"]
test-utils = ["openvm-circuit/test-utils"]
parallel = ["openvm-circuit/parallel"]
mimalloc = ["openvm-circuit/mimalloc"]
jemalloc = ["openvm-circuit/jemalloc"]
