[package]
name = "sdk-v2"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
openvm-stark-backend = { workspace = true }
openvm-stark-sdk = { workspace = true }

openvm-build = { workspace = true }
openvm-circuit = { workspace = true }
openvm-transpiler = { workspace = true }
openvm = { workspace = true }

cuda-backend-v2 = { workspace = true, optional = true }

openvm-algebra-circuit = { workspace = true }
openvm-algebra-transpiler = { workspace = true }
openvm-bigint-circuit = { workspace = true }
openvm-bigint-transpiler = { workspace = true }
openvm-ecc-circuit = { workspace = true }
openvm-ecc-transpiler = { workspace = true }
openvm-keccak256-circuit = { workspace = true }
openvm-keccak256-transpiler = { workspace = true }
openvm-sha256-circuit = { workspace = true }
openvm-sha256-transpiler = { workspace = true }
openvm-pairing-circuit = { workspace = true }
openvm-pairing-transpiler = { workspace = true }
openvm-rv32im-circuit = { workspace = true }
openvm-rv32im-transpiler = { workspace = true }

stark-backend-v2 = { workspace = true }
continuations-v2 = { workspace = true }
verify-stark = { workspace = true }

bitcode = { workspace = true }
bon = { workspace = true }
cfg-if = { workspace = true }
clap = { workspace = true, features = ["derive"] }
derivative = { workspace = true }
derive_more = { workspace = true }
derive-new = { workspace = true }
eyre = { workspace = true }
getset = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"], optional = true }
toml = { workspace = true }

[features]
default = ["parallel", "jemalloc"]

metrics = ["openvm-circuit/metrics"]
tco = [
    "openvm-circuit/tco",
    "openvm-rv32im-circuit/tco",
    "openvm-sha256-circuit/tco",
    "openvm-keccak256-circuit/tco",
    "openvm-bigint-circuit/tco",
    "openvm-algebra-circuit/tco",
    "openvm-ecc-circuit/tco",
    "openvm-pairing-circuit/tco",
]
unprotected = ["openvm-circuit/unprotected"]

# for guest profiling:
perf-metrics = [
    "openvm-circuit/perf-metrics",
    "openvm-transpiler/function-span",
]

# turns on stark-backend debugger in all proofs
stark-debug = ["openvm-circuit/stark-debug"]
test-utils = ["openvm-circuit/test-utils"]

async = ["tokio"]
parallel = ["openvm-circuit/parallel"]
mimalloc = ["openvm-circuit/mimalloc"]
jemalloc = ["openvm-circuit/jemalloc"]
jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
nightly-features = ["openvm-circuit/nightly-features"]

cuda = [
    "dep:cuda-backend-v2",
    "openvm-circuit/cuda",
    "openvm-algebra-circuit/cuda",
    "openvm-bigint-circuit/cuda",
    "openvm-ecc-circuit/cuda",
    "openvm-keccak256-circuit/cuda",
    "openvm-sha256-circuit/cuda",
    "openvm-pairing-circuit/cuda",
    "openvm-rv32im-circuit/cuda",
    "continuations-v2/cuda",
]
