[package]
name = "sdk-v2"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
openvm-stark-backend = { workspace = true }
openvm-stark-sdk = { workspace = true }

openvm-build = { workspace = true }
openvm-circuit = { workspace = true }
openvm-transpiler = { workspace = true }
openvm = { workspace = true }

cuda-backend-v2 = { workspace = true, optional = true }
openvm-sdk-config = { workspace = true }

stark-backend-v2 = { workspace = true }
continuations-v2 = { workspace = true }
verify-stark = { workspace = true }

bitcode = { workspace = true }
bon = { workspace = true }
cfg-if = { workspace = true }
clap = { workspace = true, features = ["derive"] }
derivative = { workspace = true }
derive_more = { workspace = true }
derive-new = { workspace = true }
eyre = { workspace = true }
getset = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"], optional = true }
toml = { workspace = true }

[features]
default = ["parallel", "jemalloc"]

metrics = ["continuations-v2/metrics", "openvm-sdk-config/metrics"]
aot = [
    "openvm-circuit/aot",
    "openvm-sdk-config/aot",
]
tco = [
    "openvm-circuit/tco",
    "openvm-sdk-config/tco",
]
unprotected = ["openvm-circuit/unprotected"]

# for guest profiling:
perf-metrics = [
    "openvm-circuit/perf-metrics",
    "openvm-transpiler/function-span",
    "openvm-sdk-config/perf-metrics"
]

# turns on stark-backend debugger in all proofs
stark-debug = ["openvm-circuit/stark-debug"]
test-utils = ["openvm-circuit/test-utils"]

async = ["tokio"]
parallel = ["continuations-v2/parallel", "openvm-sdk-config/parallel"]
mimalloc = ["openvm-circuit/mimalloc", "openvm-sdk-config/mimalloc"]
jemalloc = ["openvm-circuit/jemalloc", "openvm-sdk-config/jemalloc"]
jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
nightly-features = ["openvm-circuit/nightly-features"]

cuda = [
    "dep:cuda-backend-v2",
    "openvm-circuit/cuda",
    "openvm-sdk-config/cuda",
    "continuations-v2/cuda",
]
