[package]
name = "verify-stark"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Lightweight crate to verify a VM STARK proof"

[dependencies]
openvm-circuit = { workspace = true }
openvm-continuations = { workspace = true }
openvm-native-compiler = { workspace = true }
openvm-native-recursion = { workspace = true }
p3-fri = { workspace = true }

bitcode = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }

[features]
default = ["parallel"]
parallel = []
