[package]
name = "verify-stark"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Lightweight crate to verify a STARK proof for an OpenVM virtual machine."

[dependencies]
openvm-stark-backend.workspace = true
openvm-stark-sdk.workspace = true
openvm-circuit.workspace = true
stark-recursion-circuit-derive.workspace = true

bitcode.workspace = true
eyre.workspace = true
p3-field.workspace = true
serde.workspace = true
thiserror.workspace = true
zstd.workspace = true

[features]
default = []
