[package]
name = "algebra-example"
version = "0.0.0"
edition = "2021"

[workspace]
members = []

[dependencies]
# TODO: switch back after PR is merged
#openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
    #"std",
#], branch = "develop" }
#openvm-platform = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
#openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
#openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
   "std",
], branch = "feat/build-script-for-init" }
openvm-platform = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/build-script-for-init" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/build-script-for-init" }
openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/build-script-for-init" }

serde = { version = "1.0.216" }
num-bigint = { version = "0.4.6", features = ["serde"] }

[features]
default = []
