[package]
name = "algebra-example"
version = "0.0.0"
edition = "2021"

[workspace]
members = []

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
    "std",
], branch = "feat/remove-import-for-init" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/remove-import-for-init" }

serde = { version = "1.0.216" }
num-bigint = { version = "0.4.6", features = ["serde"] }

[features]
default = []
