[package]
name = "ecc-example"
version = "0.0.0"
edition = "2021"

[workspace]
resolver = "2"
members = []

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git" }
openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", package = "k256" }
hex-literal = { version = "0.4.1", default-features = false }

[features]
default = []
std = ["openvm/std"]

# remove this if copying example outside of monorepo
[patch."https://github.com/openvm-org/openvm.git"]
openvm = { path = "../../crates/toolchain/openvm" }
openvm-algebra-guest = { path = "../../extensions/algebra/guest" }
openvm-ecc-guest = { path = "../../extensions/ecc/guest" }
k256 = { path = "../../guest-libs/k256" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(openvm_intrinsics)'] }
