[package]
name = "ecdsa-example"
version = "0.0.0"
edition = "2021"

[workspace]
members = []

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
    "std",
] }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git" }
openvm-p256 = { git = "https://github.com/openvm-org/openvm.git", package = "p256" }
hex-literal = { version = "0.4.1", default-features = false }

[features]
default = []

# remove this if copying example outside of monorepo
[patch."https://github.com/openvm-org/openvm.git"]
openvm = { path = "../../crates/toolchain/openvm" }
openvm-algebra-guest = { path = "../../extensions/algebra/guest" }
openvm-ecc-guest = { path = "../../extensions/ecc/guest" }
p256 = { path = "../../guest-libs/p256" }
